# bazel-springboot-project-template

./: .bazelrc  .gitignore  Makefile  README.md  WORKSPACE  maven_install.json
dbrepository-sqlite/: BUILD.bazel
dbrepository-sqlite/src/main/java/codes/showme/repository/impl/: AccountRepositoryImpl.java  CategoryRepositoryImpl.java
dbrepository-sqlite/src/main/sql/migrations/: 1.0__initial.sql
dbrepository-sqlite/src/test/java/codes/showme/repository/impl/: AbstractIntegrationTest.java  AccountRepositoryImplTest.java  BUILD.bazel
domain/: BUILD.bazel
domain/src/main/java/codes/showme/domain/: Account.java  AccountRepository.java  Category.java  CategoryRepository.java
server/: BUILD.bazel  springboot_dupeclass_allowlist.txt
server/src/main/java/: BUILD.bazel
server/src/main/java/codes/showme/server/: Main.java
server/src/main/java/codes/showme/server/config/: AppConfig.java
server/src/main/java/codes/showme/server/controller/: IndexController.java
server/src/main/resources/: BUILD.bazel  application.yml
server/src/main/resources/templates/pages/: index.html
server/src/main/resources/templates/pages/error/: 403.html  404.html  500.html
server/src/main/resources/templates/pages/fragments/: footer.html  nav.html
tech-lib/: BUILD.bazel
tools/rules_ebean/: rules.bzl
tools/rules_ebean/src/main/java/internal/: BUILD.bazel  DdlGeneratorCommand.java
