package(default_visibility = ["//visibility:public"])


java_library(
    name = "json",
    srcs = ["src/main/java/codes/showme/techlib/json/JsonUtil.java"],
    deps = [
    ],
)


java_library(
    name = "ioc-instance-factory",
    srcs = ["src/main/java/codes/showme/techlib/ioc/InstanceFactory.java"],
    deps = [
        ":ioc-instance-provider"
    ],
)

java_library(
    name = "ioc-instance-provider",
    srcs = ["src/main/java/codes/showme/techlib/ioc/InstanceProvider.java",
            "src/main/java/codes/showme/techlib/ioc/IocInstanceNotUniqueException.java",
            "src/main/java/codes/showme/techlib/ioc/IocException.java"],
)

java_library(
    name = "pagination",
    srcs = [
        "src/main/java/codes/showme/techlib/pagination/Pagination.java",
        "src/main/java/codes/showme/techlib/pagination/PageRequest.java",
    ],
    deps = [
        "@maven//:com_fasterxml_jackson_core_jackson_annotations"
    ]
)


java_library(
    name = "ioc",
    exports = [":ioc-instance-provider",
               ":ioc-instance-factory"],
)