load("@rules_spring//springboot:springboot.bzl", "springboot")

package(default_visibility = ["//visibility:public"])

app_deps = [
    "@maven//:org_thymeleaf_thymeleaf",
    "@maven//:com_fasterxml_jackson_core_jackson_annotations",
    "@maven//:org_springframework_spring_beans",
    "@maven//:org_springframework_spring_core",
    "@maven//:org_springframework_boot_spring_boot_starter_thymeleaf",
    "@maven//:org_springframework_boot_spring_boot_loader_tools",
    "@maven//:org_springframework_boot_spring_boot_loader",
    "@maven//:org_springframework_boot_spring_boot",
    "@maven//:org_springframework_boot_spring_boot_autoconfigure",
    "@maven//:org_springframework_boot_spring_boot_starter_web",
    "@maven//:org_springframework_spring_context",
    "@maven//:org_springframework_spring_webmvc",
    "@maven//:org_springframework_boot_spring_boot_starter_validation",
    "@maven//:jakarta_servlet_jakarta_servlet_api",
    "@maven//:org_springframework_spring_web",
    "@maven//:ch_qos_logback_logback_classic",
    "@maven//:org_slf4j_slf4j_api"
]

java_library(
    name = "lib",
    srcs = glob(["**/*.java"]),
    deps = app_deps,
    resources = ["//server/src/main/resources:server-resources"],
)

springboot(
    name = "springboot",
    boot_app_class = "codes.showme.server.Main",
    java_library = ":lib",
    dupeclassescheck_enable = True,
    dupeclassescheck_ignorelist = "//server:springboot_dupeclass_allowlist.txt",
)
