
java_library(
    name = "abstractIntegrationTest",
    srcs = ["AbstractIntegrationTest.java"],
    testonly = True,
    deps = [
        "//domain",
        "//dbrepository-sqlite",
        "//third_party:unittest",
        "//tech-lib:ioc",
        "//third_party:repository",
        "//third_party:db_migration",
        "@maven//:ch_qos_logback_logback_classic",
        "@maven//:org_apache_commons_commons_lang3",
    ],
)


java_test(
    name = "AccountRepositoryImplTest",
    srcs=["AccountRepositoryImplTest.java"],
    test_class = "codes.showme.repository.impl.AccountRepositoryImplTest",
    jvm_flags = ["-javaagent:$(location @maven//:io_ebean_ebean_agent)"],
    tags = ["sqlite","db"],
    deps = [
        ":abstractIntegrationTest",
        "//domain",
        "//dbrepository-sqlite",
        "//tech-lib:ioc",
        "//tech-lib:pagination",
        "//third_party:unittest",
        "//third_party:db_migration",
        "@maven//:io_ebean_ebean_agent",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:io_ebean_ebean_annotation",
        "@maven//:org_apache_commons_commons_lang3",
    ],
)
